--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ li a{
 
 
 html{
-    background-image: url("bball.png");
+    background-image: url("bball(1).png");
     background-size: cover;
     background-attachment: fixed;
     
